--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue": "^2.6.11",
     "vue-router": "^3.5.1",
     "vuelidate": "^0.7.6",
+    "vuescroll": "^4.17.3",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
